# segment_length_evaluation

./: .gitignore  .mailmap  LICENSE  README.md
genome_simulation/: Cargo.toml  README.md
genome_simulation/src/: cl_args.yaml  main.rs
segdist/: segdist.py
segment_length_analysis/: Cargo.toml
segment_length_analysis/src/: cl_args.yaml  hash_functions.rs  lib.rs  main.rs  qgram_iterator.rs  tests.rs  unwieldy_tests.rs
workflow/: Snakefile  config.yaml  genomes.tsv
workflow/envs/: plot_env.yaml  rust_env.yaml
workflow/rules/: analysis.smk  aux.smk  genome_files.smk  plotting.smk
workflow/scripts/: aggregate_counts.py  plot_empiric_errors.py  plot_gc_facets.py  plot_genome_comparison.py  plot_genome_landscape.py  plot_successive_errors.py  visualize_predicted_distributions.py
